# AGENT_VF

./: .env  README.md  __init__.py  backlog.json  environment.yml  prompts_spec.json  pyproject.toml  requirements-dev.txt  requirements.txt  strategic_test_plan.md
api/: __init__.py  main.py
core/: __init__.py  models.py
etl/: __init__.py  cleaning.py  conversion.py  extraction.py  indexation.py  transformation.py
orchestrator/: __init__.py  workflow.py
rag/: __init__.py  retriever.py
tests/: __init__.py  conftest.py  pytest.ini  run_tests.py  test_api.py  test_conversion.py  test_models.py  test_orchestrator.py  test_rag.py  test_validator.py  test_writer.py
validation/: __init__.py  validator.py
writer/: __init__.py  client.py
